added author on list

--- a/patrick_noframework/project/templates/FrontPage.html.twig
+++ b/patrick_noframework/project/templates/FrontPage.html.twig
@@ -3,6 +3,7 @@
     <ul>
         {% for link in submissions %}
             <a href="{{ link.url }}">{{ link.title }}</a>
+            <small>Submitted by: <b>{{ link.author }}</b></small>
         {% endfor %}
     </ul>
 {% endblock %}
